--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   db:
-    image: mariadb:10.3
+    platform: linux/x86_64
+    image: mysql:5.7
     volumes:
       - "db-data:/var/lib/mysql"
     environment:
